--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/material": "^7.3.1",
     "@mui/material-nextjs": "^7.3.0",
     "@mui/stylis-plugin-rtl": "^7.3.1",
+    "@mui/system": "^7.3.1",
     "@mui/x-charts": "^8.10.1",
     "@mui/x-data-grid": "^8.10.1",
     "next": "^15.4.7",
@@ -34,11 +35,13 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.54.2",
+    "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.7.0",
     "@testing-library/react": "^16.3.0",
     "@types/react": "^19.1.10",
     "@types/stylis": "^4.2.7",
     "jest": "^30.0.5",
+    "playwright": "^1.54.2",
     "typescript": "5.9.2"
   }
 }
